--- a/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.html
+++ b/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.html
@@ -1,16 +1,12 @@
-<style>
-table, th, td {
-  border:1px solid black;
-}
-</style>
 <main #helpPage>
-  <h1 class="h3 p-mb-3 font-weight-normal">Go to section</h1>
+  <h1 class="h4 p-mb-3 font-weight-normal">Go to section</h1>
   <p>
     <a pageScroll="" [pageScrollDuration]="1" href="#ncstack">Option 1: NetCDF4 Image Stacks</a><br/>
     <a pageScroll="" [pageScrollDuration]="1" href="#csvfiles">Option 2: CSV Time Series Files</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#examplefiles">Example Files</a><br/>
   </p>
 
-  <h1 id="intro" class="h3 p-mb-3 font-weight-normal">User Data Upload</h1>
+  <h1 id="intro" class="h1 p-mb-3 font-weight-normal">User Data Upload</h1>
 
   <p>
     With this new, experimental feature we allow users to ingest (parts of) their own data sets into QA4SM for comparison
@@ -47,7 +43,7 @@ table, th, td {
   </ol>
 
   <a id="ncstack"></a>
-  <h2 class="h3 mb-3 font-weight-normal">Option 1: Upload NetCDF4 Image Stacks</h2>
+  <h2 class="h2 mb-3 font-weight-normal">Option 1: Upload NetCDF4 Image Stacks</h2>
   <p>
     Most Level 3 and Level 4 soil moisture data is usually provided in image format with three data dimensions (latitude, longitude, time). Images can be concatenated along the time dimension to create image stacks / data cubes.
     From these data cubes, time series can be extracted, which is the basis for our validation algorithm.
@@ -55,7 +51,7 @@ table, th, td {
   <h3 class="h3 mb-3 font-weight-normal">General Requirements</h3>
   <p>
     QA4SM supports image stacks in NetCDF4 format only. NetCDF is the most common format for climate data records and detailed CF conventions to create those files exist
-    (<a href = "cfconventions.org/cf-conventions/cf-conventions">available here</a>).
+    (<a href = "https://cfconventions.org/cf-conventions/cf-conventions">available here</a>).
     In general we use the python library <a href = "https://xarray.dev/">xarray</a> to open netCDF files. If your data is compatible with xarray, there are only a few more things to consider.
   </p>
   <ul>
@@ -75,7 +71,7 @@ table, th, td {
       As data variables must be 3-dimensional, 1 coordinate variable for each dimension (latitude, longitude, time) must be present in the file (see <a pageScroll="" [pageScrollDuration]="1" href="#ncdims">this section</a>).
     </li>
     <li>
-      Latitude and Longitude coordinates assigned to soil moisture observations must always refer to the WGS84 reference system (i.e. Longitudes from -180 to 180 &degE, Latitudes between -90 and 90 &degN.
+      Latitude and Longitude coordinates assigned to soil moisture observations must always refer to the WGS84 reference system (i.e. Longitudes from -180 to 180 &deg;E, Latitudes between -90 and 90 &deg;N.
     </li>
     <li>
         A file must contain at least one soil moisture variable to use for validation. If a file contains multiple variables, one must be selected after uploading the file in the respective dropdown menu.
@@ -85,7 +81,7 @@ table, th, td {
 
   <a id="ncdims"></a>
   <h3 class="h3 mb-3 font-weight-normal">Required dimensions and dimension attributes</h3>
-  <h4 class="h3 mb-3 font-weight-normal">Latitude and Longitude</h4>
+  <h4 class="h4 mb-3 font-weight-normal">Latitude and Longitude</h4>
   <p>
     Two of the three dimensions in a netCDF image stack refer to the location of a grid cell and assign latitude and longitude coordinates. There are two ways to pass coordinates for a grid:
   </p>
@@ -95,11 +91,11 @@ table, th, td {
       The coordinates along the two axes then span a 2-dimension grid that contains the information on the location of all points. The longitude variable is structured accordingly.
       <table>
         <tr>
-          <td>Variable</td>
+          <td><b>Variable</b></td>
           <td>lat</td>
         </tr>
         <tr>
-          <td>Attributes (dimensions)</td>
+          <td><b>Attributes (dimensions)</b></td>
           <td>
             lat (lat: 148)
             <table>
@@ -119,12 +115,12 @@ table, th, td {
           </td>
         </tr>
         <tr>
-          <td>Coordinates [dtype]</td>
+          <td><b>Coordinates [dtype]</b></td>
           <td>lat (lat) [float64]</td>
         </tr>
         <tr>
-          <td>Data / Values</td>
-          <td>[69.88, 69.62, &#8230, 33.38, 33.1]</td>
+          <td><b>Data / Values</b></td>
+          <td>[69.88, 69.62, &#8230;, 33.38, 33.1]</td>
         </tr>
       </table>
     </li>
@@ -133,11 +129,11 @@ table, th, td {
       assigned that contain the data point locations directly (16*35 data points in the following example). The longitude variable is structured accordingly.
       <table>
         <tr>
-          <td>Variable</td>
+          <td><b>Variable</b></td>
           <td>lat</td>
         </tr>
         <tr>
-          <td>Attributes (dimensions)</td>
+          <td><b>Attributes (dimensions)</b></td>
           <td>
             lat (y: 16, x: 35)
             <table>
@@ -157,16 +153,16 @@ table, th, td {
           </td>
         </tr>
         <tr>
-          <td>Coordinates [dtypes]</td>
+          <td><b>Coordinates [dtypes]</b></td>
           <td>lat (y, x) [float64] <br> lon (y, x) [float64]</td>
         </tr>
         <tr>
-          <td>Data / Values</td>
-          <td> [5.125,  5.375,  &#8230, 13.375, 13.625] <br>
-               [5.125,  5.375,  &#8230, 13.375, 13.625] <br>
-               <center>&#8942</center>
-               [5.125,  5.375,  &#8230, 13.375, 13.625] <br>
-               [5.125,  5.375,  &#8230, 13.375, 13.625]
+          <td><b>Data / Values</b></td>
+          <td> [5.125,  5.375,  &#8230;, 13.375, 13.625] <br>
+               [5.125,  5.375,  &#8230;, 13.375, 13.625] <br>
+               <div>&#8942;</div>
+               [5.125,  5.375,  &#8230;, 13.375, 13.625] <br>
+               [5.125,  5.375,  &#8230;, 13.375, 13.625]
           </td>
         </tr>
       </table>
@@ -188,7 +184,7 @@ table, th, td {
     </li>
   </ul>
 
-  <h4 class="h3 mb-3 font-weight-normal">Observation time stamps</h4>
+  <h4 class="h4 mb-3 font-weight-normal">Observation time stamps</h4>
   <p>
     The third dimension in a file refers to the observation time stamp. It is assigned to a 1-dimensional coordinate variable <b>time</b> (10 time stamps in the following example)
   </p>
@@ -200,11 +196,11 @@ table, th, td {
   </p>
   <table>
     <tr>
-      <td>Variable</td>
+      <td><b>Variable</b></td>
       <td>time</td>
     </tr>
     <tr>
-      <td>Attributes (dimensions)</td>
+      <td><b>Attributes (dimensions)</b></td>
       <td>
         time (time=10)
         <table>
@@ -224,12 +220,12 @@ table, th, td {
       </td>
     </tr>
     <tr>
-      <td>Coordinates [dtype]</td>
+      <td><b>Coordinates [dtype]</b></td>
       <td>time (time) [datetime64[ns]]</td>
     </tr>
     <tr>
-      <td>Data / Values</td>
-      <td>['2019-01-01T00:00:00.0', &#8230, '2019-01-10T00:00:00.0']</td>
+      <td><b>Data / Values</b></td>
+      <td>['2019-01-01T00:00:00.0', &#8230;, '2019-01-10T00:00:00.0']</td>
     </tr>
   </table>
   <p>
@@ -261,7 +257,7 @@ table, th, td {
 
 
   <a id="csvfiles"></a>
-  <h2 class="h3 mb-3 font-weight-normal">Option 2: Upload Time Series</h2>
+  <h2 class="h2 mb-3 font-weight-normal">Option 2: Upload Time Series</h2>
 
   <p>
     As a more flexible way of providing data (which requires some pre-processing on the user side), we also allow uploading a collection of individual time series stored in <b>.csv</b> format.
@@ -276,32 +272,32 @@ table, th, td {
     The file name of an individual CSV file in the zip archive must match the following pattern:
   </p>
 
-  <center><i>&lt;DATASET_NAME&gt;_gpi=&lt;GPI&gt;_lat=&lt;LAT&gt;_lon=&lt;LON&gt;.csv</i></center>
+  <div><i><b>&lt;DATASET_NAME&gt;</b>_gpi=<b>&lt;GPI&gt;</b>_lat=<b>&lt;LAT&gt;</b>_lon=<b>&lt;LON&gt;</b>.csv</i></div>
   <p>
     with:
   <p>
   <table>
     <tr>
-      <td>&lt;DATASET_NAME&gt;</td>
+      <td><b>&lt;DATASET_NAME&gt;</b></td>
       <td>The name of the dataset (same for all files)</td>
     </tr>
     <tr>
-      <td>&lt;GPI&gt;</td>
+      <td><b>&lt;GPI&gt;</b></td>
       <td>a unique grid point index for the location / file</td>
     </tr>
     <tr>
-      <td>&lt;LAT&gt;</td>
-      <td>latitude in &degN (between -90 and 90 &degN) as a floating point number</td>
+      <td><b>&lt;LAT&gt;</b></td>
+      <td>latitude in &degN (between -90 and 90 &deg;N) as a floating point number</td>
     </tr>
       <tr>
-      <td>&lt;LON&gt;</td>
-      <td>longitude in &degE (between -180 and 180 &degE) as a floating point number</td>
+      <td><b>&lt;LON&gt;</b></td>
+      <td>longitude in &deg;E (between -180 and 180 &deg;E) as a floating point number</td>
     </tr>
   </table>
   <p>
-  E.g. the filename for a data set called 'myDataset' for a single point (ID: 000001) at the location at Latitude 38.887 &degN, Longitude 101.043 &degW would be:
+  E.g. the filename for a data set called 'myDataset' for a single point (ID: 000001) at the location at Latitude 38.887 &deg;N, Longitude 101.043 &deg;W would be:
   </p>
-  <center><i>myDataset_gpi=000001_lat=38.887_lon=-101.043.csv</i></center>
+  <div><i>myDataset_gpi=000001_lat=38.887_lon=-101.043.csv</i></div>
 
   <h3 class="h3 mb-3 font-weight-normal">File format</h3>
   <p>
@@ -320,21 +316,22 @@ table, th, td {
   </ul>
   <p>
     To test whether a file complies with the required format, you can try to read it in python with <a href = "https://pandas.pydata.org/">pandas</a>.
-    &lt;FNAME&gt; refers to the location of the CSV file in the following example:
+    <b>&lt;FNAME&gt;</b> refers to the location of the CSV file in the following example:
   </p>
-  <center><i>pandas.read_csv(&lt;FNAME&gt;, index_col=0, parse_dates=True)</i></center>
+  <div><i>pandas.read_csv(<b>&lt;FNAME&gt;</b>, index_col=0, parse_dates=True)</i></div>
 
   <h3 class="h3 mb-3 font-weight-normal">Metadata</h3>
   <p>
     Metadata for the individual variables (columns) in the CSV files (e.g. units, long name) can be provided in an additional file with the name
     'metadata.yml' alongside the CSV files (stored in the same zip archive). This should have a similar format to this example for a 'metadata.yml' file:
   </p>
-  <div>
+  <div class="yml">
     myvarname1:<br>
     &nbsp;&nbsp; long_name: soil moisture 1<br>
     &nbsp;&nbsp; units: m^3/m^3<br>
-    myvarname2:<br>
-    &nbsp;&nbsp; long_name: soil moisture 2<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8942;<br>
+    myvarnameX:<br>
+    &nbsp;&nbsp; long_name: soil moisture x<br>
     &nbsp;&nbsp; units: m^3/m^3<br>
   </div>
 
@@ -342,6 +339,11 @@ table, th, td {
   <p>
   All CSV files and optionally the metadata file have to be in the same directory. This directory has to be uploaded as zip file.
   </p>
+
+  <a id="examplefiles"></a>
+  <h2 class="h2 mb-3 font-weight-normal">Example Files</h2>
+  Example files that fulfill the above described requirements to various degrees can be downloaded from
+  <a href = "https://github.com/awst-austria/qa4sm-testdata/tree/master/user_data">this GitHub package</a>.
 
   <qa-scroll-to-top></qa-scroll-to-top>
 </main>
