--- a/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.scss
+++ b/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.scss
@@ -1,11 +1,18 @@
 @import "src/styles";
 
 main{
-  max-width: 40rem;
+  max-width: 60rem;
 }
 
 div {
   text-align: center;
+}
+.yml {
+  text-align: left;
+  width: 15rem;
+  margin-left: 5rem;
+  margin-bottom: 2rem;
+  border-width:3px; border-style:solid;
 }
 
 img {
@@ -15,7 +22,9 @@ img {
 
 table, th, td {
   border:1px solid black;
+  border-collapse: collapse;
 }
+
 
 //.w3-round{
 //  align-content: center;
